# fcc

./: .env  Dockerfile  Procfile  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 050c691db65c_add_content_column_to_post_table.py  408cd84b412a_add_user_table.py  8e3c13d954a8_add_last_few_columns_to_posts_table.py  9508b353fb72_create_post_table.py  cb66914d67e1_add_foreign_key_to_post_table.py  d06ad7db1d3b_auto_vote.py  ec641c6d2b5b_add_phone_number.py
app/: calculations.py  config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  post.py  user.py  vote.py
kafka/: client_code.py  kafka.py
tests/: __init__.py  conftest.py  database.py  test_calc.py  test_post.py  test_users.py  test_vote.py
