[tool.poetry]
name = "freecodecamp"
version = "0.1.0"
description = ""
authors = ["Komron Khisomov <normok_9595@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
