[tool.poetry]
name = "freecodecamp"
version = "0.1.0"
description = ""
authors = ["Komron Khisomov <normok_9595@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
psycopg = "^3.1.9"
psycopg2-binary = "^2.9.6"
sqlalchemy = "^2.0.15"
email-validator = "^2.0.0.post2"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
